<resources>
    <string name="app_name">GoogleMapsApplication</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">Not have account? <b>Sing Up</b></string>
    <string name="login">Sign in</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="iv_cd_logo">ApplicationLogo</string>
    <string name="user_greeting">Welcome back!</string>
    <string name="add_new_account">I want to create an account</string>
    <string name="reports">Reports</string>
</resources>