<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pearl"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_cd_logo"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_form_auth"
        android:paddingStart="25dp"
        android:paddingTop="30dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_greeting"
            android:textAppearance="@style/textAppearanceHeadline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/passwordTil"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordTil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_email">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            tools:layout_editor_absoluteY="173dp">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTil"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/goToRegisterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goToRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_marginBottom="8dp"
            android:text="@string/add_new_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>